WexGit/Wex_DX/force-app/main/default/objects/MVF_Email_Settings__c/MVF_Email_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>MVF Email Settings</label>
</CustomObject>