WexGit/Wex_DX/force-app/main/default/objects/MVF_Email_Settings__c/fields/MVF_24_Hour_Template__c.field-meta.xml
<CustomField>
    <fullName>MVF_24_Hour_Template__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MVF 24 Hour Template</label>
    <length>30</length>
    <type>Text</type>
</CustomField>