WexGit/Wex_DX/force-app/main/default/objects/MVF_Email_Settings__c/fields/MVF_7_Day_Template__c.field-meta.xml
<CustomField>
    <fullName>MVF_7_Day_Template__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MVF 7 Day Template</label>
    <length>30</length>
    <type>Text</type>
</CustomField>