WexGit/Wex_DX/force-app/main/default/objects/MVF_Email_Settings__c/fields/MVF_QBW_Q7E_Personalized_Series_2__c.field-meta.xml
<CustomField>
    <fullName>MVF_QBW_Q7E_Personalized_Series_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MVF QBW-Q7E - Personalized Series 2</label>
    <length>20</length>
    <type>Text</type>
</CustomField>