WexGit/Wex_DX/force-app/main/default/objects/MVF_Email_Settings__c/fields/MVF_WQM_Generic_Series_3__c.field-meta.xml
<CustomField>
    <fullName>MVF_WQM_Generic_Series_3__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MVF WQM - Generic Series 3</label>
    <length>20</length>
    <type>Text</type>
</CustomField>